feat(item): add drop and hand-swap item activation
- ItemActivateListener: handle drop and hand-swap activations, cancel
  supported drops and swaps so the item stays in place, ignore unsupported
  activate types before running item logic, skip drop activation right after
  a genuine click, and route all activation paths through shared pre and post
  event gating
- ActivateType: add DROP_ITEM and SWAP_HAND activate types and document that
  they are resolved from their own events rather than action lookup
- ActivatableCustomItem: require supported activate types and extend the
  activation contract and docs to cover clicks, drops, and hand swaps